--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta
-    name="viewport"
-    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>TG Graph</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chart</title>
 </head>
 <body>
-<div class="container">
-    <div class="card">
-        <div class="tg-chart" id="chart1"></div>
-        <div class="tg-chart" id="chart2"></div>
-        <div class="tg-chart" id="chart3"></div>
-        <div class="tg-chart" id="chart4"></div>
-        <div class="tg-chart" id="chart5"></div>
-        <a href="" id="mode_switcher"></a>
+    <div class="container">
+        <div class="card">
+            <a href="" id="mode_switcher"></a>
+            <div class="chart" id="chart_1"></div>
+            <div class="chart" id="chart_2"></div>
+            <div class="chart" id="chart_3"></div>
+            <div class="chart" id="chart_4"></div>
+            <div class="chart" id="chart_5"></div>
+        </div>
     </div>
-</div>
-<script src="app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
